--- a/notebook/Data_read.ipynb
+++ b/notebook/Data_read.ipynb
@@ -2,29 +2,72 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pdal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "# import geoplot as gplt\n",
-    "import geopandas as gpd\n",
     "# import geoplot.crs as gcrs\n",
+    "import geopandas as gpd\n",
     "import imageio\n",
-    "import pandas as pd\n",
     "import pathlib\n",
-    "import matplotlib.pyplot as plt\n",
     "import mapclassify as mc\n",
     "import numpy as np\n",
     "import laspy\n",
     "import rasterio\n",
     "from rasterio import mask\n",
     "import folium\n",
-    "import geopandas as gpd\n",
-    "import io\n",
-    "from shapely.geometry import box\n",
-    "import pdal"
+    "import matplotlib.pyplot as plt\n",
+    "import logging\n",
+    "import sys\n",
+    "from shapely.geometry import Polygon\n",
+    "sys.path.append(\"/home/michael/USGS-LIDAR-on-AgriTech\")\n",
+    "from fetch_data import FetchData\n",
+    "from script.visualize import Visualize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MINX, MINY, MAXX, MAXY = [-93.756155, 41.918015, -93.756055, 42.918115]\n",
+    "polygon = Polygon(((MINX, MINY), (MINX, MAXY), (MAXX, MAXY), (MAXX, MINY), (MINX, MINY)))\n",
+    "region = \"IA_FullState\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_fetcher = FetchData(polygon, region)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data=data_fetcher.run_pipeline()\n",
+    "print(type(data))\n",
+    "df = data_fetcher.get_elevation(data)\n",
+    "print(df.info())\n",
+    "print(df)"
    ]
   },
   {
